fixed options onclick and progress bar color overflow

--- a/styles/game.css
+++ b/styles/game.css
@@ -87,7 +87,10 @@ input[type=radio] {
 }
 
 input[type=radio]:checked + span {
-  background-color: orange;
+  background-color: rgb(255, 115, 0);  
+  border-radius: 5px;
+  width: 198px;
+  height: 28px;
 }
 
 .answer-content {
@@ -127,6 +130,8 @@ input[type=radio]:checked + span {
   height: 20px;
   background-color: #FE007A;
   border-radius: 50px;
+  width: 298px;
+  height: 18px;
 }
 
 /* Results styles */
